# wallhaven-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  error.rs  firefox.rs  image_processing.rs  main.rs  steps.rs
src/firefox/: mod.rs  models.rs
src/steps/: download_wallpaper.rs  image_processing.rs  setup_logger.rs
