[package]
name = "wallhaven-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }   # clap
dirs = "6.0.0"                                         # get home dir
fern = { version = "0.7.1", features = ["colored"] }   # setup fancy logger
futures = "0.3.31"                                     # futures traits
glob = "0.3.3"                                         # get firefox sessionstore.jsonlz4 path from all profiles
humantime = "2.3.0"                                    # logging (the time)
image = "0.25.9"                                       # image manipulation
log = "0.4.29"                                         # logging duh
lz4 = "1.28.1"                                         # Compression
serde = { version = "1.0.228", features = ["derive"] } # Macros to parse things
serde_json = "1.0.149"                                 # Parse things
shellexpand = "3.1.1"                                  # expand home directory
sysinfo = "0.37.2"                                     # To check if firefox is opened or not
thiserror = "2.0.17"                                   # error crate, must be replaced or something, errors must have context
tokio = { version = "1.49.0", features = ["full"] }    # For async runtime
wallhaven-rs = "0.2.3"                                 # Pretty self-explainatory


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 } # Pedantic takes priority on the others


print_stdout = "warn"
match_bool = "allow"
